[package]
name = "pinned-mutex"
version = "0.2.0"
authors = ["Chad Austin <chad@chadaustin.me>"]
edition = "2021"
rust-version = "1.60"
license = "MIT"
description = "Mutex wrappers with structural pinning"
repository = "https://github.com/chadaustin/pinned-mutex"
keywords = ["mutex", "pin"]
categories = ["concurrency"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = { version = "0.12", optional = true }

[dev-dependencies]
pin-project = "1.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
